--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "test": "npm run dev & npm run test:empty & npm run test:others",
-    "test:docker": "npm run test:empty & npm run test:others",
-    "test:others": "npx playwright test tests/run-next",
-    "test:empty": "npx playwright test tests/empty-array.test.ts",
+    "test": "npx playwright test tests/empty-array.test.ts tests/run-next",
+    "test:o": "npx playwright test tests/run-next",
+    "test:e": "npx playwright test tests/empty-array.test.ts",
+    "test:d": "npm run dev & npm test",
     "prepare": "husky"
   },
   "keywords": [],
